Zoom several ranges at once, and fix single-cell zoom in
zoomIn built its range inline and so kept the old two-corner form after executeRange was corrected:
a zoom on row 3 column 0 sent [3, 0, 3, 0] and asked to expand a three-row block. It looked right
because expanding a block containing the target does expand the target, which is exactly how this
kind of thing survives. zoomIn(3, 0) on Qtr2 now expands Qtr2 and nothing else.

zoomIn and zoomOut take a list of Range like keepOnly and removeOnly. Verified live: zooming in on
Qtr1 and Qtr3 together expands both and leaves Qtr2 and Qtr4 alone. One request rather than one per
member, because each zoom reshapes the grid and the second would work from positions that no longer
mean what they meant when they were picked.

zoomIn's fallback to "coordinates" is now limited to a single cell, which is all it was ever for -
a POV placeholder cell - and all that field can express.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>